# get_phone_vue

./: WordReader  docker-compose.yml
back/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  copy.sh  manage.py  pyproject.toml  run_docker.sh  run_docker_new.sh  run_worker_loc_2  worker_backuo
back/WordReader/: WordReader.deps.json
back/api/: admin.py  models.py  serializers.py  serializers_.py  urls.py  validators.py  views.py  views_.py
back/assets/: ErrorNotFound.810cb860.js  Login.63770f27.js  MainMenuLayout.c164c4cc.css  MainMenuLayout.faaee929.js  Phones.362d5b53.js  Phones.b5400dd7.css  ProgramDescription.8cda2843.css  ProgramDescription.99c3cc82.js  QBtn.d592d1c8.js  QIcon.2e05e966.js  SettingsPage.cfcd8906.js  TokenService.35ceee12.js  TrainingPage.4dbeb162.js  TrainingPage.7775e752.css  api.6ecfec2e.js  axios.db3506c3.js  datepicker_load.918e4d17.css  datepicker_load.c57d06ac.js  index.8f2b4bb4.js  index.b9168b59.css  index.es.4ecb75ad.js
back/base/: paginators.py  regex.py  test.py  view.py
back/custom_auth/: views.py
back/extraction_numbers/: Doc.py  DocHeandler.py  DocHeandler_backup.py  backup.py  class_data_base.py  class_data_base_new.py  perevod_v_text.py  pict001.wmf  pict002.wmf  re_named_entities.py  stop_words.py  websocket_client.py
back/get_phone_view/: asgi.py  celery.py  routers.py  settings.py  spectacular.py  urls.py  wsgi.py
back/index/: backup.py  forms.py  models.py  tasks.py  urls.py  views.py
back/osa_settings/: apps.py  forms.py  models.py  urls.py  views.py
back/searchfio/: apps.py  forms.py  urls.py  (+1 more)
(+230 files in other folders)
